@@ -8,7 +8,8 @@ opennap_SOURCES=opennap.h main.c add_file.c db.c search.c \
 	level.c client_quit.c server_login.c server_connect.c synch.c util.c \
 	md5c.c md5.h global.h hotlist.c remove_file.c list_channels.c \
 	list_users.c ping.c resume.c change.c
+opennap_LDADD=@MYSQLLIBDIR@
 metaserver_SOURCES=metaserver.c
 EXTRA_DIST=sample.conf sample.motd napster.txt .indent.pro create_db.sql \
 	FAQ patchnap.c spyserv.c spynap.c
-INCLUDES=-I/usr/include/mysql -DSHAREDIR=\"$(pkgdatadir)\"
+INCLUDES=@MYSQLINCDIR@ -DSHAREDIR=\"$(pkgdatadir)\"
